# ARM-big-LITTLE-Stimulator

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  stresser.h
src/: main.c  stresser.c
